# unity_custom_mcp

./: .gitignore  LICENSE  README.md
server/: .env.example  README.md  pyproject.toml
server/src/unity_mcp/: __init__.py  config.py  connection.py  protocol.py  server.py
server/src/unity_mcp/tools/: __init__.py  _media.py  asset.py  audio.py  console.py  editor.py  gameobject.py  generator.py  menu.py  package.py  scene.py  script.py  texture.py
server/tests/: test_connection.py  test_protocol.py
unity-bridge/com.wethinks.mcp-bridge/: README.md  package.json
unity-bridge/com.wethinks.mcp-bridge/Editor/: CommandParams.cs  CommandRegistry.cs  MainThreadDispatcher.cs  McpServer.cs  McpWindow.cs  MiniJson.cs  WeThinks.Mcp.Editor.asmdef
unity-bridge/com.wethinks.mcp-bridge/Editor/Handlers/: AssetHandler.cs  AssetPathGuard.cs  ConsoleHandler.cs  EditorHandler.cs  GameObjectHandler.cs  GeneratorHandler.cs  HandlerUtil.cs  MenuHandler.cs  PackageHandler.cs  SceneHandler.cs  ScriptHandler.cs
unity-bridge/com.wethinks.mcp-bridge/Runtime/: McpFirstPersonController.cs  WeThinks.Mcp.Runtime.asmdef
